--- a/AssignmentTwo/Base.lproj/Main.storyboard
+++ b/AssignmentTwo/Base.lproj/Main.storyboard
@@ -1,26 +1,141 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1421" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="QXb-3L-sTa">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Location-->
+        <scene sceneID="eSF-Kh-1lX">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="3Db-dC-Xa7" customClass="LocationViewController" customModule="AssignmentTwo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="Nz9-S5-JmZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="7Id-2V-QST"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <view key="view" contentMode="scaleToFill" id="1Co-U7-EWV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="5Lq-89-z8P">
+                                <rect key="frame" x="0.0" y="64" width="320" height="442"/>
+                            </mapView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZOc-nW-Z8Y">
+                                <rect key="frame" x="16" y="527" width="288" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="5Lq-89-z8P" secondAttribute="trailing" id="3ZQ-Vb-CwA"/>
+                            <constraint firstItem="5Lq-89-z8P" firstAttribute="leading" secondItem="1Co-U7-EWV" secondAttribute="leading" id="6nr-0h-FKb"/>
+                            <constraint firstItem="5Lq-89-z8P" firstAttribute="top" secondItem="Nz9-S5-JmZ" secondAttribute="bottom" id="9if-am-Dpr"/>
+                            <constraint firstItem="ZOc-nW-Z8Y" firstAttribute="leading" secondItem="1Co-U7-EWV" secondAttribute="leadingMargin" id="R73-2r-hGA"/>
+                            <constraint firstItem="ZOc-nW-Z8Y" firstAttribute="top" secondItem="5Lq-89-z8P" secondAttribute="bottom" constant="21" id="U2n-XK-1uz"/>
+                            <constraint firstItem="5Lq-89-z8P" firstAttribute="centerX" secondItem="ZOc-nW-Z8Y" secondAttribute="centerX" id="bIE-we-6MO"/>
+                            <constraint firstAttribute="bottom" secondItem="ZOc-nW-Z8Y" secondAttribute="bottom" constant="20" symbolic="YES" id="uF4-w4-IJ1"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Location" id="Mxy-4i-PeF">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="sa1-7h-TsH"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="distanceLabel" destination="ZOc-nW-Z8Y" id="sMy-fZ-h6L"/>
+                        <outlet property="mapView" destination="5Lq-89-z8P" id="Kjh-W9-9u6"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SVJ-VJ-dWI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2390.625" y="-70.774647887323951"/>
+        </scene>
+        <!--Search-->
+        <scene sceneID="HJ3-O2-7cn">
+            <objects>
+                <tableViewController id="cH0-EC-cIG" customClass="ResultTableViewController" customModule="AssignmentTwo" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="24Z-th-Mcq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="search" translucent="NO" id="9k2-xK-PNh">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="SingleResultCell" id="IyI-Pu-QNH" customClass="ResultTableViewCell" customModule="AssignmentTwo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="72" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IyI-Pu-QNH" id="Bt8-hx-g7Z">
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MMn-T2-CYc">
+                                            <rect key="frame" x="8" y="11" width="271" height="21"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="pictureTitle" destination="MMn-T2-CYc" id="eOe-mh-t2Y"/>
+                                    <segue destination="3Db-dC-Xa7" kind="show" identifier="showPictureLocation" id="POT-y9-heT"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="cH0-EC-cIG" id="eys-5X-F5k"/>
+                            <outlet property="delegate" destination="cH0-EC-cIG" id="4Jl-7x-C0t"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Search" id="AMz-9a-jpG"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="YPV-hT-ybP">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
+                    <connections>
+                        <outlet property="searchBar" destination="9k2-xK-PNh" id="2mv-Ku-gQj"/>
+                        <outlet property="searchDisplayController" destination="RJ2-3c-ct4" id="bIN-vp-KTC"/>
+                        <outlet property="tableView" destination="24Z-th-Mcq" id="TcY-aW-r3N"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dYM-ik-Nl6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="RJ2-3c-ct4">
+                    <connections>
+                        <outlet property="delegate" destination="cH0-EC-cIG" id="amE-yn-E2v"/>
+                        <outlet property="searchContentsController" destination="cH0-EC-cIG" id="KrD-1o-ypD"/>
+                        <outlet property="searchResultsDataSource" destination="cH0-EC-cIG" id="9Pl-Sh-z51"/>
+                        <outlet property="searchResultsDelegate" destination="cH0-EC-cIG" id="kF2-iK-PFX"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="1584" y="-70"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yOd-Gd-mB5">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QXb-3L-sTa" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jhQ-uy-SiV">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="cH0-EC-cIG" kind="relationship" relationship="rootViewController" id="pxZ-HI-N8b"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E1N-Pv-WT9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="755.625" y="-69.718309859154928"/>
         </scene>
     </scenes>
 </document>
